# metabo-workbench-parser

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_sample_factors.py  003_add_factors_raw_and_measurements_constraint.py  004_add_ms_measurement_columns.py  005_add_category_columns.py  006_add_file_parse_status.py  007_add_file_category_columns.py
src/metaloader/: __init__.py  cli.py  config.py  database.py  models.py  qc.py
src/metaloader/parsers/: __init__.py  mwtab.py  mwtab_ms.py  mwtab_nmr.py
src/metaloader/services/: derive_service.py  export_service.py  file_handler.py  import_service.py  ingest_dir_service.py  parse_dir_service.py  parse_ms_service.py  parse_nmr_service.py  parse_service.py  tagger_service.py
src/metaloader/utils/: hashing.py  tagger.py  type_detector.py
tests/: __init__.py  test_derive_service.py  test_hashing.py  test_mwtab_parser.py  test_tagger.py  test_type_detector.py
